--- a/JinnyMMp240/style.css
+++ b/JinnyMMp240/style.css
@@ -1,18 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Fascinate+Inline&display=swap');
 body{
-    margin:75px;
-    background-color:#ffcccc;
+    margin:100px;
+    background-color:#ebe0e0;
     font-family:'Times New Roman', serif;
   }
   
   h1{
-    background-color:#ffe066;
-    color: white;
-    width:400px;
+    background-color:#f5e6ac;
+    color: black;
+    width:150px;
     height:40px;
-    border:solid 4px #1f1f14;
+    border:solid 3px #1f1f14;
     font-family:'Times New Roman', serif;
     font-size: 35px;
     padding:10px;
+    font-family: "Fascinate Inline", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  border-radius: 10px;
+  }
+  h2{
+    color: #9f80ff;
   }
   
   
@@ -24,8 +32,23 @@ body{
   
   p{
     text-align: justify;
+    line-height: 30px;
   }
-  
+
+  ul {
+    margin-bottom: 20px auto;
+    border: 3px solid black;
+    padding: 10px;
+    list-style-type: none;
+    width: 250px;
+    border-radius: 5px;
+    background-color: azure;
+}
+ul li {
+  text-align: justify;
+  line-height: 35px;
+}
+
   button{
     background-color:#b3ecff;
     color:white;
@@ -36,3 +59,7 @@ body{
     background-color:#9f80ff;
     font-family: 'Times New Roman', serif;
   }
+
+ 
+  
+  
