--- a/midterm/style.css
+++ b/midterm/style.css
@@ -1,10 +1,11 @@
-/* Global Styles */
+
 body, html {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
     background: url('images/background.jpg.webp') repeat center center fixed;
     background-size: cover;
+
     
 
 }
@@ -20,22 +21,33 @@ header {
     position: fixed;
     z-index: 1000;
 }
-
+.logo img{
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+}
 .logo {
+    width: auto;
+    height: 100%;
     margin-left: 10px;
-    margin-right: 80px;
+    margin-right: 5em;
 }
 
 /* Navigation Buttons */
-nav button {
-    background-color: #a8d8ea;
-    border-radius: 20px;
+
+button {
+    width: 120px;
+    height: 30px;
+    background-color:  #4da6ff;
+    border-radius: 10px;
     font-weight: bold;
-    color: #333;
-   margin-left: 50px;
+    color: white;
+    margin-left: 50px;
+    font-size: 1rem;
 }
 
-nav button:hover {
+ button:hover {
+    background-color:#e6eeff;
     border-radius: 50px;
     font-weight: bold;
     color: #333;
@@ -46,7 +58,13 @@ nav button:hover {
     width: 1108px;
     height: auto;
     margin-left: 120px;
-    margin-top: 80px;
+    margin-top: 5em;
+}
+.poster2 img {
+    width: 1108px;
+    height: auto;
+    margin-left: 7.5em;
+    margin-top: 5em;
 }
 .intro{
     display: flex; 
@@ -58,7 +76,7 @@ nav button:hover {
     align-items: center; 
     margin-bottom: 20px;
     clear: both;
-    margin-left: 120px;
+    margin-left: 7.5em;
     margin-right: 30px;
 }
 
@@ -87,7 +105,7 @@ main {
     height: 250px;
     justify-content: center; 
     background-color: rgba(255, 255, 255, 0.90);
-   flex-wrap: wrap; 
+    flex-wrap: wrap; 
     overflow-x: auto;
     align-items: center; 
     clear: both;
@@ -118,7 +136,7 @@ main {
     padding-top: 10px;
 }
 .character-name{
-    font-size: 13px; 
+    font-size: 13px; /* 1rem=16px */
     margin-top: 5; 
     margin-bottom: 0; 
     padding: 0; 
@@ -130,11 +148,11 @@ main {
     height:auto;
     justify-content: center; 
     background-color: rgba(255, 255, 255, 0.90);
-   flex-wrap: wrap; 
+    flex-wrap: wrap; 
     overflow-x: auto;
     align-items: center; 
     clear: both;
-    margin-left: 120px;
+    margin-left: 7.5em; /*120px*/
     margin-bottom: 10px;
 
 }
@@ -150,15 +168,15 @@ main {
     background-color: white; 
     padding: 20px; 
     width: 1068px;
-    margin-left: 120px;
-    margin-right: 120px;
+    margin-left: 7.5em;
+    margin-right: 7.5em;
 }
 .page2 {
     margin-top: 20px;
     display: flex; 
     align-items: flex-start; 
     justify-content: flex-start;
-    width: 800px;
+    width: 50em;
     margin: 10px auto; 
     padding: 20px;
     border-radius: 10px;
@@ -166,7 +184,7 @@ main {
 }
 
 .info-box {
-    margin-top: 20px;
+    margin-top: 10px;
     margin-top: 120px;
     width: 600px;
     height: 10px;
@@ -180,14 +198,14 @@ main {
     margin-right: 20px;
 }
 .imgleft img {
-    margin-top: 80px;
+    margin-top: 5em;
     width: 200px;
-    height: 200px;
+    height: auto;
     border-radius: 10px;
 }
 
 .character-2 {
-    margin-top: 30px;
+    margin-top: 15px;
     width: 550px;
     height: 300px;
     background: #e3e5f5;
@@ -196,7 +214,7 @@ main {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
 }
 .character-2 h3 {
-    font-size: 24px;
+    font-size: 1.5em; /* 24px/ 16 */
 }
 .character-2 p {
    margin: 0;
@@ -208,6 +226,10 @@ main {
     margin-bottom: 10px;
 }
 
+.video{
+    width: 1108px;
+    margin-left: 7.5em;
+}
 
 footer {
     background: #409ecd;
